# ndeploy

./: .gitignore  Cargo.toml  LICENSE  build.rs  flake.nix  readme.md  renovate.json  result
.github/workflows/: build.yaml
src/: args.rs  commands.rs  config.rs  main.rs  run_util.rs
