[package]
name = "ndeploy"
version = "0.6.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10"
tokio = { version = "1.49", features = ["macros", "rt", "process", "io-util", "time"] }


[build-dependencies]
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
